--- a/android/flyRTC/app/src/main/res/values/strings.xml
+++ b/android/flyRTC/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">flyRTC</string>
+    <string name="app_sr">flySR</string>
     <string name="app_can">flyCAN</string>
 
     <string name="login_admin">手机号或邮箱</string>
