--- a/android/flyRTC/app/src/main/res/values/strings.xml
+++ b/android/flyRTC/app/src/main/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="login_out">账号已退出</string>
 
     <string name="ability_video">视频</string>
+    <string name="ability_video_set">Codec</string>
+    <string name="ability_video_codec">Codec Setting</string>
+    <string name="ability_video_setting">设置</string>
+    <string name="ability_video_set1">Video Codec</string>
+    <string name="ability_video_set2">Audio Codec</string>
 
     <string name="sdk_version">SDK_VERSION:</string>
     <string name="demo_version">DEMO_VERSION:</string>
